home/Deployments/nextcloud/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-svc
  labels:
    app: nextcloud-svc
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: nextcloud-app
