home/Deployments/nextcloud/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  ingressClassName: nginx-external
  rules:
  - host: cloud.heyit.works
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-svc
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress-internal
  namespace: nextcloud-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  ingressClassName: nginx-internal
  rules:
  - host: cloud.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-svc
            port:
              number: 80
